syntax = "proto3";

option java_multiple_files = true;

package com.hififilter.hannibal.api.grpc;

service HelloGrpcApi {

    rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {

    string name = 1;
}

message HelloResponse {

    string message = 1;
}
